@@ -9,17 +9,3 @@ test list = val1, val2  , "value 3", 'value four,',val5           ,val6
 
 continuation = first line
     second line
-
-# The following line intentionally contains whitespace and should be ignored.
-                                               
-
-list += one
-list += two
-list += three
-        four
-list += five
-
-
-empty value = 
-another blank=
-yet another blank          =               
