@@ -1,0 +1,14 @@
+# This is another test configuration file
+# The following line intentionally contains whitespace and should be ignored.
+                                               
+
+list += one
+list += two
+list += three
+        four
+list += five
+
+
+empty value = 
+another blank=
+yet another blank          =               
